More `List.of()` instead of `Collections.singletonList()`